# hogwarts-httprunner

./: .coverage  .gitignore  .travis.yml  123.har  README.md  Untitled.har  Untitled.yml  Untitled1.har  Untitled1.yml  add.har  add.json  add.yml  addcou.har  addcou.yml  file_up.py  loadfile.har  mubu_login.py  paixu.py  pyproject.toml  requirements.txt  test_mubu_login.py  tiger.yml
confing/: log.properties
core/: __init__.py  cli.py  data_curd.py  func_suit.py  getlog.py  loader.py  parse.py  properties_utils.py  result_assert.py  runner.py  utis.py
data/: __init__.py  cookies.yaml  env.yml  login.csv
hogwars_httprunner/: loader.py  runner.py
htturunner/: __init__.py  cli.py  func_suit.py  getlog.py  loader.py  parse.py  result_assert.py  runner.py  utis.py
main_function/: cli.py  getlog.py  parse.py  result_assert.py  runner.py  utis.py  validate.py
reports/: 1574777324.html  1574777356.html  1574777546.html  1574777673.html
testbase/: conftest.py
testbase/com/: testdemo.py
testbase/con/: testdemo.py
tests/: __init__.py  conftest.py  main.py  stat_report.sh  test_cli.py  test_runner.py  test_single_api.py  test_testcase.py  test_weixin_apart.py
tests/api/: __init__.py  addcustomer.yml  get_create_department.yml  get_department_list.yml  get_home_page.yml  get_login.yml  get_login_submit.yml  get_weixin_delete_department.yml  get_weixin_tocken.yml  get_weixin_update_department.yml  loadfile.yml
tests/data/: login.csv
tests/report/: 00f73e07-4464-479c-85a0-a79b16a2b88e-result.json  0118eb3a-6a6b-4da9-94c4-ac4e14f01bde-result.json  (+734 more)
(+2830 files in other folders)
